--- a/privacy.html
+++ b/privacy.html
@@ -1,2 +1,3 @@
-This is a simple privacy policy required for TikTok API testing.
-We do not collect any user data.
+<h1>Privacy Policy</h1>
+<p>This app does not collect, store, or share user data.</p>
+<p>This page exists only for TikTok API compliance.</p>
