Update terms.html with Terms of Service section

--- a/terms.html
+++ b/terms.html
@@ -1,2 +1,3 @@
-This is a simple privacy policy required for TikTok API testing.
-We do not collect any user data.
+<h1>Terms of Service</h1>
+<p>This app is for personal automation use only.</p>
+<p>No user data is collected or stored.</p>
